# lvgl_linux

./: CMakeLists.txt  README.md  make.sh
include/: common.h  log.h  lv_conf.h  lv_drv_conf.h  lv_port.h
src/: lv_port.c  main.c
